--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -2,6 +2,13 @@ Hayes R.J. and Moulton L.H. 2009. Cluster randomized trials. Chapman&Hall/CRC, B
 
 SAS Institute. 2014. Cary NC
 
+@misc{gatsonis2017methods,
+  title={Methods in Comparative Effectiveness Research},
+  author={Gatsonis, Constantine and Morton, Sally C},
+  year={2017},
+  publisher={CRC Press}
+}
+
 @article{bates2014lme4,
   title={lme4: Linear mixed-effects models using Eigen and S4},
   author={Bates, Douglas and Maechler, Martin and Bolker, Ben and Walker, Steven and others},
