--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -1,6 +1,75 @@
-Hayes R.J. and Moulton L.H. 2009. Cluster randomized trials. Chapman&Hall/CRC, Boca Raton.
+@online{PMVsStrat, 
+  author  = {DeLong, Elizabeth and Li, Lingling and Cook, Andrea }, 
+  title   = {Pair-Matching vs Stratification in Cluster-Randomized Trials}, 
+  url     = {https://www.nihcollaboratory.org/Products/Pairing-vs-stratification_V1.0.pdf}, 
+  urldate = {2017-04-28}, 
+}
 
-SAS Institute. 2014. Cary NC
+
+@online{ProtectTrial, 
+  author  = {Huang, Susan}, 
+  title   = {Project PROTECT: Protecting Nursing Homes From Infections and Hospitalization (PROTECT)}, 
+  url     = {https://clinicaltrials.gov/ct2/show/NCT03118232}, 
+  urldate = {2017-04-28}, 
+}
+
+
+@article{balzer2012match,
+  title={Why Match in Individually and Cluster Randomized Trials?},
+  author={Balzer, Laura B and Petersen, Maya L and van der Laan, Mark J},
+  year={2012}
+}
+
+@article{donner2007merits,
+  title={The merits of breaking the matches: a cautionary tale},
+  author={Donner, Allan and Taljaard, Monica and Klar, Neil},
+  journal={Statistics in medicine},
+  volume={26},
+  number={9},
+  pages={2036--2051},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@article{klar1997merits,
+  title={The merits of matching in community intervention trials: a cautionary tale},
+  author={Klar, Neil and Donner, Allan},
+  journal={Statistics in medicine},
+  volume={16},
+  number={15},
+  pages={1753--1764},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+
+@article{kingmatching,
+  title={Matching in Cluster-Randomized Experiments, with Application to the Mexican Universal Health Insurance Evaluation Statistical},
+  author={King, Gary and Nall, Clayon and Ravishankar, Nirmala and Vargas, Manett and T{\'e}llez-rojo, Martha Mar{\'\i}a and {\'A}vila, Eugenio Hern{\'a}ndez and {\'A}vila, Mauricio Hern{\'a}ndez and Llamas, H{\'e}ctor Hern{\'a}ndez},
+  publisher={Citeseer}
+}
+
+@article{diehr1995breaking,
+  title={Breaking the matches in a paired t-test for community interventions when the number of pairs is small},
+  author={Diehr, Paula and Martin, Donald C and Koepsell, Thomas and Cheadle, Allen},
+  journal={Statistics in medicine},
+  volume={14},
+  number={13},
+  pages={1491--1504},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
+@article{donner2004pitfalls,
+  title={Pitfalls of and controversies in cluster randomization trials},
+  author={Donner, Allan and Klar, Neil},
+  journal={American Journal of Public Health},
+  volume={94},
+  number={3},
+  pages={416--422},
+  year={2004},
+  publisher={American Public Health Association}
+}
 
 @misc{gatsonis2017methods,
   title={Methods in Comparative Effectiveness Research},
@@ -65,6 +134,36 @@ SAS Institute. 2014. Cary NC
   publisher={Elsevier}
 }
 
+@book{donner2000design,
+  title={Design and Analysis of Cluster Randomization Trials in Health Research},
+  author={Donner, A. and Klar, N.},
+  isbn={9780340691533},
+  lccn={00126639},
+  url={https://books.google.com/books?id=QJZrQgAACAAJ},
+  year={2000},
+  publisher={Wiley}
+}
+
+
+@book{murray1998design,
+  title={Design and Analysis of Group-randomized Trials},
+  author={Murray, D.M.},
+  number={v. 29; v. 1998},
+  isbn={9780195120363},
+  lccn={97020411},
+  series={Design and Analysis of Group-randomized Trials},
+  url={https://books.google.com/books?id=cVLs3m4a9ZoC},
+  year={1998},
+  publisher={Oxford University Press}
+}
+
+
+@book{CRTrials2009,
+  title={Cluster Randomised Trials},
+  author={Hayes, Moulton},
+  year={2009},
+  publisher={Chapman and Hall\/CRC}
+}
 
 @book{donner2000design,
   title={Design and analysis of cluster randomization trials in health research},
@@ -72,7 +171,6 @@ SAS Institute. 2014. Cary NC
   year={2000},
   publisher={Arnold London, England}
 }
-
 
 @article{eldridge2006sample,
   title={Sample size for cluster randomized trials: effect of coefficient of variation of cluster size and analysis method},
@@ -217,6 +315,16 @@ SAS Institute. 2014. Cary NC
   year={1993},
   publisher={Wiley Online Library}
 }
+
+@article{imai2009essential,
+  title={The essential role of pair matching in cluster-randomized experiments, with application to the Mexican universal health insurance evaluation},
+  author={Imai, Kosuke and King, Gary and Nall, Clayton and others},
+  journal={Statistical Science},
+  volume={24},
+  number={1},
+  pages={29--53},
+  year={2009},
+  publisher={Institute of Mathematical Statistics}
 
 @book{mcculloch2001generalized,
   title={Generalized linear mixed models},
